# honest-admet

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  run_all.sh
experiments/: 00_smoke_test.py  01_validate_splits.py  02_baselines.py  03_leaderboard_repro.py  04_uncertainty.py  05_conformal_selftest.py  06_applicability_domain.py  07_unifying.py  08_foundation.py  09_embed_cache.py  10_figures.py  11_tables.py  12_review_fixes.py  13_extra_figs.py
paper/: _abstract.tex  _body.tex  honest_admet.md  honest_admet.tex  honest_admet_ml4h.tex  references.bib
paper/figures/: leakage_gradient.csv
paper/tables/: tab_atlas.tex  tab_foundation.tex  tab_leaderboard.tex
results/: ad_deciles.csv  applicability_domain.csv  atlas_full.csv  atlas_full_gaps.csv  atlas_relgap_blockci.csv  baselines.csv  baselines_gaps.csv  foundation.csv  foundation_gaps.csv  leaderboard.csv  uncertainty.csv  uncertainty_check.csv  unifying.csv
src/honest_admet/: __init__.py  conformal.py  data.py  eval.py  features.py  selective.py  stats.py
src/honest_admet/models/: __init__.py  baselines.py  foundation.py
