[project]
name = "honest-admet"
version = "0.1.0"
description = "Honest evaluation of molecular property predictors: generalization under realistic splits and trustworthy uncertainty. Built on Therapeutics Data Commons (TDC)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyTDC>=0.4.1",
    "rdkit>=2023.9.1",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1",
    "transformers>=4.38",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
